# memeattack-contracts

./: Anchor.toml  my_meme_coin_game-keypair.json  package-lock.json  package.json
programs/my-meme-coin-game/: Cargo.toml
programs/my-meme-coin-game/src/: lib.rs
tests/: my-meme-coin-game.ts
