[package]
name = "my-meme-coin-game"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meme_coin_game"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]

anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
borsh = "0.9.3" 
solana-program = "1.14.14"

